feat: setup firebase for notification
